--- a/components/commerce/rental_view.jade
+++ b/components/commerce/rental_view.jade
@@ -10,7 +10,7 @@ template(name='kiosk_rental_view')
                     a.ui.fluid.big.button(href="/m/rental")
                         i.left.chevron.large.icon
                         //- i.store.large.icon
-                        +ismall name='shop'
+                        +ismall name='rental'
                         |rentals 
                 h1.ui.center.aligned.header #{title}
                 +image_view key='image' direct=true
@@ -140,23 +140,125 @@ template(name='kiosk_rental_view')
                 +kiosk_send_message                    
 
 
+template(name='rental_view_layout')
+    +nav
+    //- a.ui.large.button(href="/m/rental")
+    //-     | Shop
+    with current_doc
+        .ui.stackable.padded.grid
+            //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
+            .row
+                .four.wide.column
+                    img.ui.centered.rounded.image(src="{{c.url image width=400 height=400 crop='fit'}}")
+                
+                    .ui.large.header #{title}
+                    if can_edit
+                        a.ui.fluid.button(href="/rental/#{_id}/edit")
+                            i.pencil.icon
+                            |edit
+                    .ui.large.vertical.fluid.menu
+                        a.item(href="/rental/#{_id}/info" class="{{isActiveRoute 'rental_info'}}")
+                            |info
+                        if rentable
+                            a.item(href="/rental/#{_id}/rentals" class="{{isActiveRoute 'rental_rentals'}}")
+                                |rentals
+                        a.item(href="/rental/#{_id}/chat" class="{{isActiveRoute 'rental_chat'}}")
+                            |chat
+                        a.item(href="/rental/#{_id}/tasks" class="{{isActiveRoute 'rental_tasks'}}")
+                            |tasks
+                        a.item(href="/rental/#{_id}/earnings" class="{{isActiveRoute 'rental_earnings'}}")
+                            |earnings
+                        a.item(href="/rental/#{_id}/stats" class="{{isActiveRoute 'rental_stats'}}")
+                            |stats
+                        a.item(href="/rental/#{_id}/ownership" class="{{isActiveRoute 'product_ownership'}}")
+                            |ownership
+                        a.item(href="/rental/#{_id}/projections" class="{{isActiveRoute 'rental_projections'}}")
+                            |projections
+                        a.item(href="/rental/#{_id}/ads" class="{{isActiveRoute 'rental_ads'}}")
+                            |ads
+                    .ui.header added by #{_author_username}
+                    |#{when}
+                    with _author_id
+                        +user_card
+                    +array_view key='tags' icon='tags' direct=true
+                    +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                    //- +text_view key='location' icon='marker' label='location description' direct=true
+
+                    +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
+                    //- +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
+                    if date_available
+                        +date_view key='date_available' label='date available' icon='calendar' direct=true
+                    if time_available
+                        +time_view key='time_available' label='time available' icon='clock' direct=true
+                    +product_adspace
+                    .ui.header 
+                        |reviews
+                .eight.wide.column
+                    +yield
+                .four.wide.column
+                    .ui.header $#{past_earnings} past earnings 
+                    .ui.header $#{future_earnings} future earnings 
+                    .ui.header #{future_reservations} future reservations
+                    .ui.header #{past_reservations} past reservations
+                    div
+                    +product_location
+                    .ui.header available_inventory #{inventory_available}
+                    if for_sale
+                        unless sold_out
+                            .ui.big.green.fluid.button.add_to_cart 
+                                |+ cart
+                        else 
+                            .ui.big.disabled.button
+                                |sold out
+                    +voting_full     
+                    .ui.basic.segment
+                        .ui.small.header
+                            |delivery instructions
+                        |#{delivery_instructions}      
+                    .ui.header
+                        |delivery
+                    +boolean_view key='pickup_delivery' label='pickup' direct=true
+                    +boolean_view key='home_dropoff_delivery' label='home dropoff' direct=true
+                    +boolean_view key='building_dropoff_delivery' label='building dropoff' direct=true
+                    +boolean_view key='healthclub_drop_off_delivery' label='health club drop off' direct=true
+                    .ui.header pricing
+                    +boolean_view key='cash_accepted' label='cash accepted' direct=true
+                    +boolean_view key='prepay' label='prepayment required' direct=true
+                    +boolean_view key='security_deposit_required' label='security deposit required' direct=true
+                    if security_deposit_required
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header pricing planning determination
+                    +boolean_view key='friend_discount' label='friend discount' direct=true
+                    if friend_discount
+                        +number_view key='security_deposit_amount' label='security deposit amount' icon='dollar'
+                    .ui.header
+                        | privacy
+                    .ui.small.header visibility
+                    +boolean_view key='visible_to_friends' label='friends' direct=true
+                    +boolean_view key='visible_to_building' label='building' direct=true
+                    +boolean_view key='visible_to_residents' label='residents' direct=true
+                    +boolean_view key='visible_to_public' label='public' direct=true
+                    .ui.divider
+                    +boolean_view key='published' label='published' direct=true
+    +footer
 
 
-template(name='rental_view_info')      
-    h1.ui.header 
-        i.info.icon
-        |info
-    +text_view key='title' direct=true
-    .ui.two.column.grid
-        .column
-            +image_view key='image' label='image' direct=true
-        .column
-            +html_view key='description' label='content' icon='content' direct=true
-    +array_view key='tags' label='tags' icon='tags' direct=true
-    +array_view key='location_tags' label='location tags' icon='marker' direct=true
-    +single_user_view key='resident' label='resident' direct=true
-    +text_view key='contact_info' label='contact info' icon='info' direct=true
-    +link_view key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
+template(name='rental_view_info')  
+    with current_doc 
+        h1.ui.header 
+            i.info.icon
+            |info
+        +text_view key='title' direct=true
+        .ui.two.column.grid
+            .column
+                +image_view key='image' label='image' direct=true
+            .column
+                +html_view key='description' label='content' icon='content' direct=true
+        +array_view key='tags' label='tags' icon='tags' direct=true
+        +array_view key='location_tags' label='location tags' icon='marker' direct=true
+        +single_user_view key='resident' label='resident' direct=true
+        +text_view key='contact_info' label='contact info' icon='info' direct=true
+        +link_view key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
 
 
             
