--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -90,19 +90,19 @@ template(name='delta')
                         .ui.small.input
                             input(type='text' val=search_value)
                         &nbsp;
-                        &nbsp;
-                        .ui.inline.small.grey.header view
-                        .ui.compact.menu
-                            .ui.simple.dropdown.item
-                                |#{current_delta.view_mode}
-                                i.dropdown.icon
-                                .menu
-                                    +set_view_mode title='table' icon='table'
-                                    +set_view_mode title='list' icon='list'
-                                    +set_view_mode title='cards' icon='cards'
-                                    +set_view_mode title='items' icon='list'
-                                    +set_view_mode title='map' icon='map'
-                                    +set_view_mode title='graph' icon='graph'
+                        //- &nbsp;
+                        //- .ui.inline.small.grey.header view
+                        //- .ui.compact.menu
+                        //-     .ui.simple.dropdown.item
+                        //-         |#{current_delta.view_mode}
+                        //-         i.dropdown.icon
+                        //-         .menu
+                        //-             +set_view_mode title='table' icon='table'
+                        //-             +set_view_mode title='list' icon='list'
+                        //-             +set_view_mode title='cards' icon='cards'
+                        //-             +set_view_mode title='items' icon='list'
+                        //-             +set_view_mode title='map' icon='map'
+                        //-             +set_view_mode title='graph' icon='graph'
                         .ui.hidden.fitted.divider
                     .scrolling    
                         each current_delta.result_ids
